--- a/Traqqer/DetailsStats.storyboard
+++ b/Traqqer/DetailsStats.storyboard
@@ -13,18 +13,27 @@
                         <viewControllerLayoutGuide type="bottom" id="EMS-Fu-oo9"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yTb-qB-dGI">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Details Stats" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fqk-6L-Iw3">
-                                <rect key="frame" x="51" y="239" width="219" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="RVd-NA-Fbd">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RVd-NA-Fbd" firstAttribute="top" secondItem="yTb-qB-dGI" secondAttribute="top" id="ARx-Zw-mhe"/>
+                            <constraint firstAttribute="bottom" secondItem="RVd-NA-Fbd" secondAttribute="bottom" id="HZA-En-A9a"/>
+                            <constraint firstItem="RVd-NA-Fbd" firstAttribute="leading" secondItem="yTb-qB-dGI" secondAttribute="leading" id="Zfi-sJ-Nlb"/>
+                            <constraint firstAttribute="trailing" secondItem="RVd-NA-Fbd" secondAttribute="trailing" id="fIS-It-b5U"/>
+                        </constraints>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="RVd-NA-Fbd" id="uhJ-JW-3W2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sxw-8g-2VE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
