--- a/Traqqer/DashboardStatsCell.xib
+++ b/Traqqer/DashboardStatsCell.xib
@@ -7,50 +7,107 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="156" id="KGk-i7-Jjw" customClass="DashboardStatsCell" customModule="Traqqer" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="331" height="156"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="76" id="KGk-i7-Jjw" customClass="DashboardStatsCell" customModule="Traqqer" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="331" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gaj-Xb-smz">
-                        <rect key="frame" x="18" y="28" width="46" height="99"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvo-c4-L9a">
-                        <rect key="frame" x="308" y="28" width="10" height="99"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="USO-AG-KdN" userLabel="Stopwatch">
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GXR-BQ-tO6">
+                        <rect key="frame" x="0.0" y="0.0" width="166" height="75"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbW-jf-icc">
+                                <rect key="frame" x="8" y="34" width="67" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gaj-Xb-smz">
+                                <rect key="frame" x="8" y="8" width="46" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="gaj-Xb-smz" firstAttribute="leading" secondItem="GXR-BQ-tO6" secondAttribute="leadingMargin" id="GC2-1a-9iR"/>
+                            <constraint firstAttribute="bottom" secondItem="sbW-jf-icc" secondAttribute="bottom" id="Lgg-um-0fH"/>
+                            <constraint firstAttribute="centerX" secondItem="sbW-jf-icc" secondAttribute="centerX" id="Vcq-Sb-oex"/>
+                            <constraint firstItem="sbW-jf-icc" firstAttribute="leading" secondItem="GXR-BQ-tO6" secondAttribute="leadingMargin" id="agj-ck-e0B"/>
+                            <constraint firstItem="sbW-jf-icc" firstAttribute="top" secondItem="gaj-Xb-smz" secondAttribute="bottom" constant="5" id="eIC-uJ-pU8"/>
+                            <constraint firstItem="gaj-Xb-smz" firstAttribute="top" secondItem="GXR-BQ-tO6" secondAttribute="topMargin" id="lgt-i9-bhV"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Vcq-Sb-oex"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iZj-NM-Azd">
+                        <rect key="frame" x="166" y="0.0" width="165" height="75"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvo-c4-L9a">
+                                <rect key="frame" x="147" y="8" width="10" height="38"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goal:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0C-1f-mD6">
+                                <rect key="frame" x="8" y="46" width="41" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="5" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7gE-kd-rV2">
+                                <rect key="frame" x="146" y="46" width="10" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="7gE-kd-rV2" firstAttribute="bottom" secondItem="iZj-NM-Azd" secondAttribute="bottomMargin" id="1ua-zJ-mcY"/>
+                            <constraint firstItem="dvo-c4-L9a" firstAttribute="leading" secondItem="iZj-NM-Azd" secondAttribute="leading" constant="8" id="3pH-EM-Jgo"/>
+                            <constraint firstAttribute="bottom" secondItem="G0C-1f-mD6" secondAttribute="bottom" constant="8" id="Iz5-Cv-FY1"/>
+                            <constraint firstItem="7gE-kd-rV2" firstAttribute="top" secondItem="dvo-c4-L9a" secondAttribute="bottom" id="Jua-d0-EWy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7gE-kd-rV2" secondAttribute="trailing" constant="1" id="KYr-ut-ju6"/>
+                            <constraint firstItem="dvo-c4-L9a" firstAttribute="top" secondItem="iZj-NM-Azd" secondAttribute="top" constant="8" id="S7e-xo-78l"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dvo-c4-L9a" secondAttribute="trailing" id="Tr9-U7-dXb"/>
+                            <constraint firstItem="G0C-1f-mD6" firstAttribute="leading" secondItem="iZj-NM-Azd" secondAttribute="leading" constant="8" id="WpA-a3-9hk"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="3pH-EM-Jgo"/>
+                            </mask>
+                        </variation>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="centerY" secondItem="gaj-Xb-smz" secondAttribute="centerY" id="335-s7-wV6"/>
-                    <constraint firstItem="gaj-Xb-smz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="20" id="4MQ-xO-BmP"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="dvo-c4-L9a" secondAttribute="bottom" constant="20" id="Ddp-66-9Lt"/>
-                    <constraint firstAttribute="centerX" secondItem="USO-AG-KdN" secondAttribute="centerX" id="DmJ-6q-26Y"/>
-                    <constraint firstItem="dvo-c4-L9a" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="20" id="QOl-H7-b8l"/>
-                    <constraint firstItem="gaj-Xb-smz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="ZYB-bT-HtJ"/>
-                    <constraint firstAttribute="centerY" secondItem="USO-AG-KdN" secondAttribute="centerY" id="e8Q-Bw-3gN"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="gaj-Xb-smz" secondAttribute="bottom" constant="20" id="jC5-Ie-GnX"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="dvo-c4-L9a" secondAttribute="trailing" constant="5" id="luA-4L-gMM"/>
-                    <constraint firstAttribute="centerY" secondItem="dvo-c4-L9a" secondAttribute="centerY" id="td6-df-4r7"/>
+                    <constraint firstAttribute="trailing" secondItem="iZj-NM-Azd" secondAttribute="trailing" id="3Y1-yG-eF5"/>
+                    <constraint firstItem="GXR-BQ-tO6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="5yT-Ls-NFU"/>
+                    <constraint firstItem="iZj-NM-Azd" firstAttribute="leading" secondItem="GXR-BQ-tO6" secondAttribute="trailing" id="6J1-6P-jC3"/>
+                    <constraint firstAttribute="bottom" secondItem="iZj-NM-Azd" secondAttribute="bottom" id="9O2-Ss-DPv"/>
+                    <constraint firstItem="GXR-BQ-tO6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="A3m-7C-rvC"/>
+                    <constraint firstAttribute="trailing" secondItem="GXR-BQ-tO6" secondAttribute="trailing" id="B8K-MT-559"/>
+                    <constraint firstAttribute="bottom" secondItem="GXR-BQ-tO6" secondAttribute="bottom" id="I25-h7-J2n"/>
+                    <constraint firstItem="iZj-NM-Azd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="RTn-Ye-kvO"/>
+                    <constraint firstItem="iZj-NM-Azd" firstAttribute="width" secondItem="GXR-BQ-tO6" secondAttribute="width" id="VQ3-6z-37T"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="B8K-MT-559"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="duration" destination="USO-AG-KdN" id="qV2-NP-g1u"/>
+                <outlet property="duration" destination="sbW-jf-icc" id="joP-jL-AWQ"/>
+                <outlet property="goalLabel" destination="7gE-kd-rV2" id="zlR-ku-ehr"/>
+                <outlet property="goalStaticLabel" destination="G0C-1f-mD6" id="eOp-wR-SxE"/>
                 <outlet property="nameLabel" destination="gaj-Xb-smz" id="g8U-Hh-oY1"/>
-                <outlet property="totalLabel" destination="dvo-c4-L9a" id="H6M-Bd-ho2"/>
+                <outlet property="totalLabel" destination="dvo-c4-L9a" id="ipG-k9-Jgs"/>
             </connections>
-            <point key="canvasLocation" x="265.5" y="260"/>
+            <point key="canvasLocation" x="265.5" y="255"/>
         </tableViewCell>
     </objects>
 </document>
