--- a/Traqqer/DashboardStatsCell.xib
+++ b/Traqqer/DashboardStatsCell.xib
@@ -6,28 +6,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="40" id="KGk-i7-Jjw" customClass="DashboardStatsCell" customModule="Traqqer" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="148" id="KGk-i7-Jjw" customClass="DashboardStatsCell" customModule="Traqqer" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="148"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qS-5i-Wq1">
-                        <rect key="frame" x="8" y="9" width="144" height="21"/>
+                        <rect key="frame" x="8" y="25" width="144" height="30"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="Goal" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EzN-Op-05K">
-                        <rect key="frame" x="256" y="5" width="56" height="30"/>
+                        <rect key="frame" x="256" y="25" width="56" height="30"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Value /" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pET-I9-kCZ">
-                        <rect key="frame" x="175" y="5" width="81" height="30"/>
+                        <rect key="frame" x="175" y="25" width="81" height="30"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00 : 00 : 00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="amv-QR-Vgn">
+                        <rect key="frame" x="10" y="80" width="301" height="70"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="60"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -36,11 +42,17 @@
                 <constraints>
                     <constraint firstItem="pET-I9-kCZ" firstAttribute="leading" secondItem="6qS-5i-Wq1" secondAttribute="trailing" constant="8" id="0bv-FY-Z9S"/>
                     <constraint firstAttribute="bottom" secondItem="pET-I9-kCZ" secondAttribute="bottom" constant="8" id="4Zs-s5-qXC"/>
+                    <constraint firstItem="6qS-5i-Wq1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="25" id="85X-mk-EAv"/>
                     <constraint firstItem="6qS-5i-Wq1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="H0g-SG-Zup"/>
                     <constraint firstItem="6qS-5i-Wq1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="LEW-cD-lrL"/>
+                    <constraint firstAttribute="centerX" secondItem="amv-QR-Vgn" secondAttribute="centerX" id="OVX-XB-eGe"/>
                     <constraint firstItem="pET-I9-kCZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="RbA-as-0d9"/>
+                    <constraint firstItem="amv-QR-Vgn" firstAttribute="top" secondItem="pET-I9-kCZ" secondAttribute="bottom" constant="25" id="Wn7-rA-Sya"/>
                     <constraint firstAttribute="centerY" secondItem="EzN-Op-05K" secondAttribute="centerY" id="Z88-u5-0Mw"/>
                     <constraint firstAttribute="bottom" secondItem="6qS-5i-Wq1" secondAttribute="bottom" constant="9" id="aBq-mo-QAg"/>
+                    <constraint firstItem="amv-QR-Vgn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="euP-LJ-noS"/>
+                    <constraint firstItem="EzN-Op-05K" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="25" id="k93-q1-i0Y"/>
+                    <constraint firstItem="pET-I9-kCZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="25" id="n7x-mz-3JF"/>
                     <constraint firstItem="EzN-Op-05K" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="qWR-MI-DSC"/>
                     <constraint firstAttribute="centerY" secondItem="pET-I9-kCZ" secondAttribute="centerY" id="rZm-Vj-Nct"/>
                     <constraint firstAttribute="bottom" secondItem="EzN-Op-05K" secondAttribute="bottom" constant="8" id="wxH-SK-Bku"/>
@@ -49,9 +61,14 @@
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
+                        <exclude reference="H0g-SG-Zup"/>
+                        <exclude reference="aBq-mo-QAg"/>
+                        <exclude reference="euP-LJ-noS"/>
                         <exclude reference="0bv-FY-Z9S"/>
                         <exclude reference="4Zs-s5-qXC"/>
                         <exclude reference="RbA-as-0d9"/>
+                        <exclude reference="rZm-Vj-Nct"/>
+                        <exclude reference="Z88-u5-0Mw"/>
                         <exclude reference="qWR-MI-DSC"/>
                         <exclude reference="wxH-SK-Bku"/>
                     </mask>
@@ -62,9 +79,10 @@
             <connections>
                 <outlet property="goal" destination="EzN-Op-05K" id="wOE-UB-1mX"/>
                 <outlet property="name" destination="6qS-5i-Wq1" id="9Ol-gl-ZKS"/>
+                <outlet property="timer" destination="amv-QR-Vgn" id="gqd-zE-ue1"/>
                 <outlet property="value" destination="pET-I9-kCZ" id="vpl-6E-K0x"/>
             </connections>
-            <point key="canvasLocation" x="265" y="230"/>
+            <point key="canvasLocation" x="265" y="282"/>
         </tableViewCell>
     </objects>
 </document>
