--- a/Traqqer/Dashboard.storyboard
+++ b/Traqqer/Dashboard.storyboard
@@ -20,11 +20,10 @@
                     <navigationItem key="navigationItem" title="DASHBOARD" id="Oaj-BM-CvK">
                         <barButtonItem key="backBarButtonItem" title="DASHBOARD" id="qRZ-UJ-x4N"/>
                         <barButtonItem key="leftBarButtonItem" title="Edit" style="done" id="Z4r-yU-jA9">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="hNO-FF-Iwt">
-                                <rect key="frame" x="-23" y="-15" width="71" height="30"/>
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hNO-FF-Iwt">
+                                <rect key="frame" x="16" y="7" width="24" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                                <state key="normal" title="EDIT">
+                                <state key="normal" image="glyphicons-31-pencil">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -51,6 +50,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addButton" destination="PvW-cK-YcW" id="4fq-8s-THz"/>
+                        <outlet property="detailsButton" destination="hNO-FF-Iwt" id="WDF-SB-WVO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ctF-uS-JSd" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -77,6 +77,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="glyphicons-31-pencil" width="24" height="24"/>
         <image name="glyphicons-433-plus" width="20" height="20"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
